# To-Do-List

./: .gitignore  README.md
docs/: README_BACKEND_WINDOWS.md  README_FRONTEND.md
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.ts  app.module.ts
frontend/src/lib/data-access/models/: boardModel.ts  listModel.ts  reminderItemModel.ts
frontend/src/lib/feature/: backend.service.ts  page-title.service.ts
frontend/src/lib/ui/: ui.module.ts
frontend/src/lib/ui/board/: board.component.html  board.component.scss  board.component.ts
frontend/src/lib/ui/list/: list.component.html  list.component.scss  list.component.ts
frontend/src/lib/ui/listDisplayer/: listDisplayer.component.html  listDisplayer.component.scss  listDisplayer.component.ts
frontend/src/lib/ui/listHeader/: listHeader.component.html  listHeader.component.scss  listHeader.component.ts
frontend/src/lib/ui/listHeaderContainer/: listHeaderContainer.component.html  listHeaderContainer.component.scss  (+1 more)
service/: CMakeLists.txt
service/data/: reminder-app.db
service/src/: CMakeLists.txt  Service.cpp
service/src/Api/: Endpoint.cpp  Endpoint.hpp
service/src/Api/Parser/: JsonParser.cpp  JsonParser.hpp  ParserIf.hpp
service/src/Core/: Manager.cpp  Manager.hpp
service/src/Core/Exception/: NotImplementedException.hpp
service/src/Core/Model/: Board.cpp  Board.hpp  List.cpp  List.hpp  Reminder.cpp  Reminder.hpp
service/src/Repository/: RepositoryIf.hpp  SQLiteRepository.cpp  SQLiteRepository.hpp
(+6 files in other folders)
